add styling,trigger resultDisplay based on win/lose

--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,42 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.App {
+  position: relative;
+}
+.App::before {
+  content: "";
+  background: url("https://rare-gallery.com/uploads/posts/340156-Rick-and-Morty-Cartoon-Morty-Smith-Rick-Sanchez-Night-Sky-Space-Stars.jpg");
+  background-size: cover;
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 .header {
+  padding: 20px;
   text-align: center;
+  position: relative;
+  color: white;
+  margin-bottom: 20px;
+}
+.header p {
+  margin: 0;
+  font-size: 20px;
+}
+.main {
+  position: relative;
 }
 .image-cards {
   display: flex;
@@ -25,4 +52,92 @@ code {
 
 .card {
   text-align: center;
+
+  color: white;
+}
+
+.img {
+  width: 200px;
+  height: auto;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.guide,
+.lose,
+.win {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
+  color: white;
+  z-index: 9999999999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.guide::before,
+.lose::before,
+.win::before {
+  background-color: rgb(0, 0, 0);
+
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.9;
+}
+.guide .guide-content {
+  z-index: 9999;
+  color: white;
+  font-size: 32px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.guide-content button,
+.lose button,
+.win button {
+  background-color: transparent;
+  padding: 20px 40px;
+  border-radius: 0;
+  border: 2px solid white;
+  color: white;
+  transition: 0.2s ease-in-out 0s;
+}
+.guide-content button:hover,
+.lose button:hover,
+.win button:hover {
+  cursor: pointer;
+  transform: scale(1.15);
+  background: #fff;
+  color: #000;
+}
+
+.hide {
+  display: none;
+}
+
+.lose *,
+.win * {
+  z-index: 9999;
+}
+.lose p,
+.win p {
+  font-size: 64px;
 }
